# vinagre

./: .gitignore  Makefile.am  NEWS  README  configure.ac  vinagre.doap
data/: vinagre.appdata.xml.in  vinagre.ui
help/: Makefile.am
help/C/: connect-reverse.page  connect.page  index.page  introduction.page  keyboard-shortcuts.page  take-screenshot.page
help/C/figures/: preferences-desktop-remote-desktop-icon
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/hu/: hu.po
help/id/: id.po
help/lv/: lv.po
help/pt_BR/: pt_BR.po
help/sv/: sv.po
help/zh_CN/: zh_CN.po
plugins/rdp/: vinagre-rdp-connection.c  vinagre-rdp-connection.h  vinagre-rdp-plugin.c  vinagre-rdp-tab.c
plugins/spice/: vinagre-spice-connection.c  vinagre-spice-tab.c
plugins/ssh/: vinagre-ssh-tab.c
plugins/vnc/: vinagre-vnc-tab.c
po/: LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en@shaw.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  kn.po  ko.po  ku.po  (+36 more)
vinagre/: pty_open.c  pty_open.h  vinagre-bookmarks-tree.c  vinagre-bookmarks-ui.c  vinagre-connect.c  vinagre-connection.c  vinagre-connection.h  vinagre-ssh.c  vinagre-tab.c  vinagre-tab.h  vinagre-ui.h  vinagre-utils.vala  vinagre-window.c  vinagre-window.h
