@YELP_HELP_RULES@

HELP_ID = vinagre

HELP_MEDIA = \
	figures/preferences-desktop-remote-desktop.png \
	figures/vinagre-connected-3-16.png

HELP_FILES = \
	connect.page \
	connect-file.page \
	connect-reverse.page \
	fullscreen.page \
	index.page \
	introduction.page \
	legal.xml \
	keyboard-shortcuts.page \
	scaling.page \
	take-screenshot.page \
	view-only.page

HELP_LINGUAS = cs de el es eu fr fa gl hu id lv pt_BR ru sl sv zh_CN
